# agenttrace

./: .gitignore  README.md  pyproject.toml  setup.py
agenttrace/: __main__.py  analyzer.py  app.py
agenttrace/detectors/: __init__.py  context_growth.py  repetition.py  retries.py
agenttrace/models/: __init__.py  trace.py
agenttrace/reports/: __init__.py  html.py  markdown.py  ui.py
sample_traces/: healthy.big.json  healthy.big.jsonl  healthy.json  healthy.jsonl  looping.big.json  looping.big.jsonl  looping.json  looping.jsonl  retry_storm.big.json  retry_storm.big.jsonl  retry_storm.json  retry_storm.jsonl
tests/: test_agenttrace.py
