[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agenttrace"
version = "0.1.0"
description = "Offline analyzer for AI agent execution traces"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AgentTrace Contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
agenttrace = "agenttrace.app:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
